tests/paczka1/small_fuzzy/26427308.err
Error in line 3: GQ3KuAWrZ0 A252 49,69
Error in line 7: BY7i A252 52,2
